--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                             <div class="badge bg-gradient-primary-to-secondary text-white mb-4">
                                 <div class="text-uppercase">Gráfico &middot; Industrial &middot; Fotografía</div>
                             </div>
-                            <div class="fs-3 fw-light text-muted">ARREGLAR ESTO</div>
-                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Soy Paula</span></h1>
+                            <div class="fs-3 fw-light text-muted">Soy la solución a tus problemas de diseño</div>
+                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Paula Rábago</span></h1>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                 <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">Currículum</a>
                                 <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Proyectos</a>
@@ -208,7 +208,7 @@
                                 <span class="text_2">Diseño industrial</span>
 
                             </p>
-                            <p class="text-muted">Soy una profesional con capacidades de liderazgo, buen trabajo en equipo, adaptable y enfocada, con mucho interés de aprendizaje dentro del área de diseño y el arte.</p>
+                            <p class="text-muted">Diseñadora estratégica y comunicadora visual proactiva, con capacidades de liderazgo, buen trabajo en equipo, adaptada y enfocada, con mucho interés de aprendizaje dentro del área de diseño ya sea Industrial y Gráfico.</p>
                             <div class="d-flex justify-content-center fs-2 gap-4">
                                 <a class="text-gradient" href="https://www.linkedin.com/in/paula-rábago-saavedra-0a6593144/"><i class="bi bi-linkedin"></i></a>
                             </div>
