--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
                                     <!-- Portfolio Item 1-->
                                     <div class="col-md-6 col-lg-4 mb-5">
                                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModalgrafico1">
-                                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                            <div class="portfolio-item-caption hovergrafico d-flex align-items-center justify-content-center h-100 w-100">
                                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                                             </div>
                                             <img class="img-fluid" src="assets/proyectos/grafico/catrinada%20cover.png" alt="..." />
@@ -74,7 +74,7 @@
                                     <!-- Portfolio Item 2-->
                                     <div class="col-md-6 col-lg-4 mb-5">
                                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModalgrafico2">
-                                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                            <div class="portfolio-item-caption hovergrafico d-flex align-items-center justify-content-center h-100 w-100">
                                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                                             </div>
                                             <img class="img-fluid" src="assets/proyectos/grafico/dinero%20cover.png" alt="..." />
@@ -83,7 +83,7 @@
                                     <!-- Portfolio Item 3-->
                                     <div class="col-md-6 col-lg-4 mb-5">
                                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModalgrafico3">
-                                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                            <div class="portfolio-item-caption hovergrafico d-flex align-items-center justify-content-center h-100 w-100">
                                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                                             </div>
                                             <img class="img-fluid" src="assets/proyectos/grafico/libro%20cover.png" alt="..." />
@@ -92,7 +92,7 @@
                                     <!-- Portfolio Item 4-->
                                     <div class="col-md-6 col-lg-4 mb-5">
                                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModalgrafico4">
-                                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                            <div class="portfolio-item-caption hovergrafico d-flex align-items-center justify-content-center h-100 w-100">
                                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                                             </div>
                                             <img class="img-fluid" src="assets/proyectos/grafico/logis%20cover.png" alt="..." />
@@ -101,7 +101,7 @@
                                     <!-- Portfolio Item 5-->
                                     <div class="col-md-6 col-lg-4 mb-5">
                                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModalgrafico5">
-                                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                            <div class="portfolio-item-caption hovergrafico d-flex align-items-center justify-content-center h-100 w-100">
                                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                                             </div>
                                             <img class="img-fluid" src="assets/proyectos/grafico/pepsi%20cover.png" alt="..." />
@@ -110,7 +110,7 @@
                                     <!-- Portfolio Item 6-->
                                     <div class="col-md-6 col-lg-4 mb-5">
                                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModalgrafico6">
-                                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                            <div class="portfolio-item-caption hovergrafico d-flex align-items-center justify-content-center h-100 w-100">
                                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                                             </div>
                                             <img class="img-fluid" src="assets/proyectos/grafico/zama%20cover.png" alt="..." />
@@ -389,7 +389,7 @@
                                 <img class="img-fluid rounded mb-5" src="assets/proyectos/grafico/catrinada%203.png" alt="..." />
                                 <img class="img-fluid rounded mb-5" src="assets/proyectos/grafico/catrinada%204.png" alt="..." />
                                 <img class="img-fluid rounded mb-5" src="assets/proyectos/grafico/catrinada%205.png" alt="..." />
-                                <button class="btn btn-primary" data-bs-dismiss="modal">
+                                <button class="btn btn-primary botongrafico" data-bs-dismiss="modal">
                                     <i class="fas fa-xmark fa-fw"></i>
                                     Cerrar
                                 </button>
