--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,7 @@
                 </li>
             </ul> -->
             <p class="text-muted copyright" data-aos="fade-up">
-                © Paula Rábago 2024. Template made with 🚀 by
+                © Paula Rábago 2024. Built with 🚀 by
                 <a href="https://manuel.wiki/">Manuel</a>
             </p>
         </footer>
